# Displacement-MicroMap-BaryFile

./: CMakeLists.txt  README.md  SECURITY.md
ImHex/: bary.hexpat
fuzz/: bary_fuzz.cpp  bary_fuzz.dict
include/bary/: bary_api.h  bary_core.h  bary_types.h
include/baryutils/: baryutils.h
src/: bary_core.cpp  bary_utils.cpp
test/: main.cpp
tool/: README.md  bary_tool.cpp  filemapping.cpp  filemapping.hpp
